removed findbugs performance errors/warnings